--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^4.4.0",
     "react-router-dom": "^7.1.1",
+    "styled-components": "^6.1.14",
     "zod": "^3.24.1"
   },
   "devDependencies": {
